keycloak/manifests/cli-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client
  namespace: keycloak
spec:
  containers:
  - name: postgres-client
    image: ubuntu:latest
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
